operations/deploy/kubernetes/app-web-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web
spec:
selector:
    matchLabels:
      app: app-web
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: app-web
        tier: frontend
    spec:
      containers:
      - name: app-web
        image: badmuts/aula-app-web:latest
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 3
