operations/deploy/kubernetes/course-db-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-db
  replicas: 1
  template:
    metadata:
      labels:
        app: course-db
        tier: database
    spec:
      containers:
      - name: course-db
        image: mongo:4.1-xenial
        ports:
          - containerPort: 27017
