operations/deploy/kubernetes/course-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  labels:
    app: course-service
spec:
  selector:
    matchLabels:
      app: course-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: course-service
        tier: backend
    spec:
      containers:
      - name: course-service
        image: badmuts/aula-course:0.0.1
        ports:
          - containerPort: 3000
