operations/deploy/kubernetes/course-service-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  labels:
    name: course-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: course-service
    spec:
      containers:
      - name: course-service
        image: badmuts/aula-course:latest
        ports:
          - containerPort: 3000
