operations/deploy/kubernetes/search-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    name: search-service
spec:
  selector:
    matchLabels:
      app: search-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: search-service
        tier: backend
    spec:
      containers:
      - name: search-service
        image: badmuts/aula-search:latest
        ports:
          - containerPort: 3000
