operations/deploy/kubernetes/search-service-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  labels:
    name: search-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: search-service
    spec:
      containers:
      - name: search-service
        image: badmuts/aula-search:latest
        ports:
          - containerPort: 3000
