operations/deploy/kubernetes/user-db-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  labels:
    name: user-db
spec:
  selector:
    matchLabels:
      app: user-db
      tier: database
  replicas: 1
  template:
    metadata:
      labels:
        app: user-db
        tier: database
    spec:
      containers:
      - name: user-db
        image: mongo:4.1-xenial
        ports:
          - containerPort: 27017
