operations/deploy/kubernetes/user-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: user-service
        tier: backend
    spec:
      containers:
      - name: user-service
        image: badmuts/aula-user:latest
        ports:
          - containerPort: 3000
