operations/deploy/kubernetes/user-service-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    name: user-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: user-service
    spec:
      containers:
      - name: user-service
        image: badmuts/aula-user:latest
        ports:
          - containerPort: 3000
