operations/deploy/kubernetes/websocket-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
  labels:
    name: websocket-service
spec:
  selector:
    matchLabels:
      app: websocket-service
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: websocket-service
        tier: backend
    spec:
      containers:
      - name: websocket-service
        image: badmuts/aula-websocket:0.0.1
        ports:
          - containerPort: 3000
