operations/deploy/kubernetes/websocket-service-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
  labels:
    name: websocket-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: websocket-service
    spec:
      containers:
      - name: websocket-service
        image: badmuts/aula-websocket:latest
        ports:
          - containerPort: 3000
