operations/deploy/kubernetes/app-web-svc.yml

---
apiVersion: v1
kind: Service
metadata:
  name: app-web
  labels:
    name: app-web
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 3000
    nodePort: 30001
  selector:
    name: app-web
