operations/deploy/kubernetes/auth-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: auth-service
