operations/deploy/kubernetes/course-db-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: course-db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: course-db
