operations/deploy/kubernetes/course-svc.yml

---
apiVersion: v1
kind: Service
metadata:
  name: app-web
  labels:
    name: app-web
spec:
  ports:
    - port: 3000
