operations/deploy/kubernetes/elastic-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elastic
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: elastic
