operations/deploy/kubernetes/nats-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  ports:
  - port: 4242
    targetPort: 4242
  selector:
    app: nats
