operations/deploy/kubernetes/search-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: search-service
