operations/deploy/kubernetes/user-db-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: user-db
