operations/deploy/kubernetes/user-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: user-service
