operations/deploy/kubernetes/web-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: web
