operations/deploy/kubernetes/websocket-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: websocket-service
